--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -30,4 +30,4 @@ jobs:
         pip install -e .
 
     - name: Run tests
-      run: python -m unittest tests/test_flask_signing.py
+      run: python -m unittest tests
